--- a/scripts/eeSurv_viz.Rmd
+++ b/scripts/eeSurv_viz.Rmd
@@ -37,9 +37,8 @@ eelifeF <- read.table('../processed/Female_events_eelife.txt',
                      sep = "\t", header = TRUE,
                      stringsAsFactors = FALSE) 
 
-# the diet combination column is tripped in the functions, recreate it
-# eelifeF <- eelifeF %>%
-#   unite(lvadComb, larvalTreat, adultTreat, sep = "_", remove = FALSE)
+eelifeF <- select(eelifeF, -setDate, -flipDate, -age)
+names(eelifeF)[1:2]<-c("age", "cageID")
 eelifeF$sex <- "F"
 
 # Male data
@@ -47,19 +46,16 @@ eelifeM <- read.table('../processed/Male_events_eelife.txt',
                      sep = "\t", header = TRUE,
                      stringsAsFactors = FALSE) 
 
-# the diet combination column is stripped in the functions, recreate it
-# eelifeM <- eelifeM %>%
-#   unite(lvadComb, larvalTreat, adultTreat, sep = "_", remove = FALSE)
+eelifeM <- select(eelifeM, -setDate, -flipDate, -age)
+names(eelifeM)[1:2]<-c("age", "cageID")
 eelifeM$sex <- "M"
   
-# Merge data
-eelife <- bind_rows(eelifeF,eelifeM) %>% 
-  select(-setDate, -flipDate, -age, -carriedM, -carriedF)
-
-names(eelife)[1:2]<-c("age", "cageID")
+eelife <- rbind(eelifeF,eelifeM)
+  
 
 #eelife$carried <- 0 
- 
+eelife <- na.omit(eelife)
+
 write.csv(eelife, file="../processed/eeAlldat.csv")
 ```
 
@@ -155,225 +151,261 @@ densPlot <- plot_grid(dens.list[[1]],dens.list[[2]],dens.list[[3]],
                       rel_widths = c(1.5,1.5, 1.5), 
                       label_size = 10)
 
-ggsave(last_plot(), file = "../plots/density_all-life_data.pdf",
+ggsave(last_plot(), file = "../plots/density_male_female.pdf",
        width = 6, height = 4)
 ```
 
-# Kaplan-Meier by diet plot with survminer
+# Testing developmental theories
+
+## a) Survival
+#### Males and females together
+#### Females alone
+#### Males alone
+## b) Reaction norms
+
+# Male and female combined
 
 ```{r}
-# by treatment combinations
-ee.comb <- survfit(Surv(age, status == 2) ~ larv_adult,
+# Model
+mf <- survfit(Surv(age, status == 2) ~ adultTreat,
                    conf.type = "log", 
                    conf.int = 0.95,
                    type = "kaplan-meier",
                    error = "greenwood",
                    data = eelife)
-# h2.diet
-str(summary(ee.comb)$table)
 
-# median for each treatment
-summary(ee.comb)$table[, "median"]
+summary(mf)$table[, "median"]
 
-# survival plot for treatment combinations
-ee.comb_plot <- ggsurvplot(ee.comb, data = eelife, 
+mf.plot <- ggsurvplot(mf, data = eelife, 
                      conf.int = FALSE,
                      palette = c("#999999", "#E69F00", 
                                  "#56B4E9", "#009E73"),
                      fun = "pct", 
                      surv.median.line = "hv",
-                     font.y = c(14),
+                    # font.y = c(14),
+                     font.x = c(font_size),
+                     font.y = c(font_size),
+                     font.tickslab = c(font_size),
+                     font.main = 12,
                      risk.table = FALSE,
                      legend = c(0.9, 0.8),
-                     #legend.labs = c("C", "DR", "HS"),
-                     legend.title = "Larval-Adult Diet") +
-  xlab("Age (days)")
-ee.comb_plot
-
-#ggpar(ee.plot, axis.text = element_text(size = font_size),
-      #font.x = c(font_size),
-      #font.y = c(font_size),
-      #font.tickslab = c(font_size))
-#KM_plot <- last_plot()
-#ggsave(last_plot(), file = "../../Figures/K-M_diet_summarized_survminer.pdf",
-       #width = 4, height = 4)
-#save(KM_plot, file = "../../Figures/KM_plot.Rda")
-
-
-
-# survival by larval diet only
-ee.larv <- survfit(Surv(age, status == 2) ~ larvalTreat,
-                   conf.int = 0.95,
-                   type = "kaplan-meier",
-                   error = "greenwood",
-                   data = eelife)
-# h2.diet
-summary(ee.larv)$table
-
-# median for each treatment
-summary(ee.larv)$table[, "median"]
-
-# survival
-ee.larv_plot <- ggsurvplot(ee.larv, data = eelife, 
-                     conf.int = FALSE,
-                     palette = c("#999999", "#E69F00", 
-                                 "#56B4E9", "#009E73"),
-                     fun = "pct", 
-                     surv.median.line = "hv",
-                     font.y = c(14),
-                     risk.table = FALSE,
-                     legend = c(0.9, 0.8),
-                     #legend.labs = c("C", "DR", "HS"),
-                     legend.title = "Larval Diet") +
-  xlab("Age (days)")
-ee.larv_plot
-
-
-# survival by adult diet only
-ee.adul <- survfit(Surv(age, status == 2) ~ adultTreat,
-                   conf.int = 0.95,
-                   type = "kaplan-meier",
-                   error = "greenwood",
-                   data = eelife)
-# h2.diet
-summary(ee.adul)$table
-
-# median for each treatment
-summary(ee.adul)$table[, "median"]
-
-# survival
-ee.adul_plot <- ggsurvplot(ee.adul, data = eelife, 
-                     conf.int = FALSE,
-                     palette = c("#999999", "#E69F00", 
-                                 "#56B4E9", "#009E73"),
-                     fun = "pct", 
-                     surv.median.line = "hv",
-                     font.y = c(14),
-                     risk.table = FALSE,
-                     legend = c(0.9, 0.8),
-                     #legend.labs = c("C", "DR", "HS"),
+                     title = "Females & Males",
+                     legend.labs = c("C", "DR"),
                      legend.title = "Adult Diet") +
+                     theme_survminer(font.main = 12)  +
   xlab("Age (days)")
-ee.adul_plot
+mf.plot
 
-# survival by line
-ee.line <- survfit(Surv(age, status == 2) ~ cageID,
-                   conf.int = 0.95,
-                   type = "kaplan-meier",
-                   error = "greenwood",
-                   data = eelife)
-summary(ee.line)$table
+# Test significance
+survdiff(Surv(age) ~ adultTreat,
+                     data = eelife, rho = 0) 
 
-# median for each treatment
-summary(ee.line)$table[, "median"]
-
-# survival
-ee.line_plot <- ggsurvplot(ee.line, data = eelife, 
-                     conf.int = FALSE,
-                     #palette = c("#999999", "#E69F00", 
-                     #            "#56B4E9", "#009E73"),
-                     fun = "pct", 
-                     surv.median.line = "hv",
-                     font.y = c(14),
-                     risk.table = FALSE,
-                     legend = c(0.9, 0.8),
-                     #legend.labs = c("C", "DR", "HS"),
-                     legend.title = "Adult Diet") +
-  xlab("Age (days)")
-ee.line_plot
+quantile(mf,  probs = c(0.1, 0.5, 0.9))
 ```
 
-# Test differences
+# EarlyRich (C diet) 
 
-```{r testdiff}
-test_all <- survdiff(Surv(NewAge, status == 2) ~ diet,
-                     data = eelife, rho = 0) # log-rank (Mantel-Haenszel) test
-test_all1 <- survdiff(Surv(NewAge, status == 2) ~ diet,
-                      data = eelife, rho = 1) # Wilcoxon (Peto & Peto test)
-test_all
-test_all1
-
-quantile(h2.diet,  probs = c(0.1, 0.5, 0.9))
-```
-
-# Pairwise tests
+### Females only
 
 ```{r}
-test_pairwise <- pairwise_survdiff(
-  Surv(age, status == 2) ~ diet, 
-  data=eelife, p.adjust.method = "bonferroni", rho = 0)
-test_pairwise1 <- pairwise_survdiff(
-  Surv(NewAge, status == 2) ~ diet, 
-  data=eelife, p.adjust.method = "bonferroni", rho = 1)
+earlyRichF <- subset(eelifeF, eelifeF$larvalTreat=="C")
 
-test_pairwise
-test_pairwise1
+erf <- survfit(Surv(age, status == 2) ~ adultTreat,
+                   conf.type = "log", 
+                   conf.int = 0.95,
+                   type = "kaplan-meier",
+                   error = "greenwood",
+                   data = earlyRichF)
 
-# significance symbols
-symnum(test_pairwise$p.value,
-       cutpoints = c(0, 0.0001, 0.001, 0.01, 0.05, 0.1, 1),
-       symbols = c("****", "***", "**", "*", "+", " "),
-       abbr.colnames = FALSE, na = "")
+summary(erf)$table[, "median"]
 
-symnum(test_pairwise1$p.value,
-       cutpoints = c(0, 0.0001, 0.001, 0.01, 0.05, 0.1, 1),
-       symbols = c("****", "***", "**", "*", "+", " "),
-       abbr.colnames = FALSE, na = "")
+erf.plot <- ggsurvplot(erf, data = earlyRichF, 
+                     conf.int = FALSE,
+                     palette = c("#999999", "#E69F00", 
+                                 "#56B4E9", "#009E73"),
+                     fun = "pct", 
+                     surv.median.line = "hv",
+                     font.x = c(font_size),
+                     font.y = c(font_size),
+                     font.tickslab = c(font_size),
+                     font.main = 12,
+                     risk.table = FALSE,
+                     legend = c(0.9, 0.8),                     
+                     title = "Early-Rich Females",
+                     legend.labs = c("C", "DR"),
+                     legend.title = "Adult Diet") +
+  theme_survminer(font.main = 12)  +
+  xlab("Age (days)")
+erf.plot
+
+# Test significance
+survdiff(Surv(age, status==2) ~ adultTreat,
+                     data = earlyRichF, rho = 0) 
+
+quantile(f_er1,  probs = c(0.1, 0.5, 0.9))
+
 ```
 
-# Reaction norms for sire families
+# EarlyRich (C diet) 
+
+### Males only
 
 ```{r}
-# remove censored events
-h2rn_filtered <- eelife[eelife$status != 3, ] 
+earlyRichM <- subset(eelifeM, eelifeM$larvalTreat=="C")
 
-# prep each treatment into its own column
+erm <- survfit(Surv(age, status == 2) ~ adultTreat,
+                   conf.type = "log", 
+                   conf.int = 0.95,
+                   type = "kaplan-meier",
+                   error = "greenwood",
+                   data = earlyRichM)
 
-# pull HS and compute median
-HS <- subset(h2rn_filtered, diet == "HS")
-hs_trim <- cbind.data.frame(HS$sireid, HS$NewAge)
-hs_med <- aggregate(. ~ HS$sireid, data = hs_trim, FUN = median)
-hs_med[, 2] <- NULL
-colnames(hs_med) <- c("sireid", "age")
-hs_med$diet <- "HS"
+summary(erm)$table[, "median"]
 
-# pull DR and compute median
-DR <- subset(h2rn_filtered, diet == "DR")
-dr_trim <- cbind.data.frame(DR$sireid, DR$NewAge)
-dr_med <- aggregate(. ~ DR$sireid, data = dr_trim, FUN = median)
-dr_med[, 2] <- NULL
-colnames(dr_med) <- c("sireid", "age")
-dr_med$diet <- "DR"
+erm.plot <- ggsurvplot(erm, data = earlyRichM, 
+                     conf.int = FALSE,
+                     palette = c("#999999", "#E69F00", 
+                                 "#56B4E9", "#009E73"),
+                     fun = "pct", 
+                     surv.median.line = "hv",
+                     font.x = c(font_size),
+                     font.y = c(font_size),
+                     font.tickslab = c(font_size),
+                     font.main = 12,
+                     risk.table = FALSE,
+                     legend = c(0.9, 0.8),                     
+                     title = "Early-Rich Males",
+                     legend.labs = c("C", "DR"),
+                     legend.title = "Adult Diet") +
+  theme_survminer(font.main = 12) +
+  xlab("Age (days)")
+erm.plot
 
-# pull C and compute median
-C <- subset(h2rn_filtered, diet == "C")
-c_trim <- cbind.data.frame(C$sireid, C$NewAge)
-c_med <- aggregate(. ~ C$sireid, data = c_trim, FUN = median)
-c_med[, 2] <- NULL
-colnames(c_med) <- c("sireid", "age")
-c_med$diet <- "C"
+survdiff(Surv(age) ~ adultTreat,
+                     data = earlyRichM, rho = 0) 
 
-# Join data frames
-mlife1 <- rbind(hs_med, c_med, dr_med)
-mlife1 <- mlife1[!(mlife1$sireid=="S39"), ]
-
-#reorder x-axis (ggplot default is alphabetical)
-mlife1$diet <- as.character(mlife1$diet) #turn diet col into a char vector
-mlife1$diet <- factor(mlife1$diet, levels = unique(mlife1$diet)) #back to ordered factor
-
-# plot reaction norms for sire families
-ggplot(mlife1, aes(x = diet, y = age, color = sireid)) +
-  geom_point(size = 3) +
-  geom_line(aes(group = sireid), alpha = 0.5, size = 1) +
-  xlab("Diet") +
-  ylab("Median lifespan (days)") +
-  theme(legend.position = "none") +
-  coord_cartesian(xlim = c(1.5, 2.5)) +
-  my_theme
-Lifespan_GxE <- last_plot()
-
-ggsave(file = "../../Figures/eelife_reaction_norms.pdf",
-       width = 4, height = 4)
-save(Lifespan_GxE, file = "../../Figures/Lifespan_GxE.Rda")
 ```
+
+# EarlyPoor (DR diet) 
+
+### Females only
+
+```{r}
+earlyPoorF <- subset(eelifeF, eelifeF$larvalTreat=="DR")
+
+epf <- survfit(Surv(age, status==2) ~ adultTreat,
+                   conf.type = "log", 
+                   conf.int = 0.95,
+                   type = "kaplan-meier",
+                   error = "greenwood",
+                   data = earlyPoorF,)
+summary(epf)$table[, "median"]
+
+epf.plot <- ggsurvplot(epf, data = earlyPoorF, 
+                     conf.int = FALSE,
+                     palette = c("#999999", "#E69F00", 
+                                 "#56B4E9", "#009E73"),
+                     fun = "pct", 
+                     surv.median.line = "hv",
+                     font.x = c(font_size),
+                     font.y = c(font_size),
+                     font.tickslab = c(font_size),
+                     font.main = 12,
+                     risk.table = FALSE,
+                     legend = c(0.9, 0.8),                     
+                     title = "Early-Poor Females",
+                     legend.labs = c("C", "DR"),
+                     legend.title = "Adult Diet") +
+  theme_survminer(font.main = 12)  +
+  xlab("Age (days)")
+epf.plot
+
+# Test significance
+survdiff(Surv(age, status==2) ~ adultTreat,
+                     data = earlyPoorF, rho = 0) 
+
+quantile(f_er1,  probs = c(0.1, 0.5, 0.9))
+
+```
+
+### Males only
+
+```{r}
+earlyPoorM <- subset(eelifeM, eelifeM$larvalTreat=="DR")
+
+epm <- survfit(Surv(age, status == 2) ~ adultTreat,
+                   conf.type = "log", 
+                   conf.int = 0.95,
+                   type = "kaplan-meier",
+                   error = "greenwood",
+                   data = earlyPoorM)
+
+summary(epm)$table[, "median"]
+
+epm.plot <- ggsurvplot(epm, data = earlyPoorM, 
+                     conf.int = FALSE,
+                     palette = c("#999999", "#E69F00", 
+                                 "#56B4E9", "#009E73"),
+                     fun = "pct", 
+                     surv.median.line = "hv",
+                     font.x = c(font_size),
+                     font.y = c(font_size),
+                     font.tickslab = c(font_size),
+                     font.main = 12,
+                     risk.table = FALSE,
+                     legend = c(0.9, 0.8),                     
+                     title = "Early-Rich Males",
+                     legend.labs = c("C", "DR"),
+                     legend.title = "Adult Diet") +
+  theme_survminer(font.main = 12) +
+  xlab("Age (days)")
+epm.plot
+
+survdiff(Surv(age, status ==2) ~ adultTreat,
+                     data = earlyPoorM, rho = 0) 
+
+```
+
+# CoxPH models hazard ratio (HR) plots
+
+```{r}
+# Forestplot
+
+# Example
+# fit.coxph <- coxph(surv_object ~ rx + resid.ds + age_group + ecog.ps, 
+#                    data = ovarian)
+
+# All together
+cph1 <- coxph(Surv(age, status==2) ~ adultTreat +sex, 
+                   data = eelife)
+ggforest(cph1, data = eelife)
+
+
+
+# Early poor
+earlyPoor <- subset(eelife, eelife$larvalTreat=="DR")
+
+cph2 <- coxph(Surv(age, status==2) ~ adultTreat + sex, 
+                   data = earlyPoor)
+ggforest(cph2, data = earlyPoor)
+
+
+
+# Early rich
+earlyRich <- subset(eelife, eelife$larvalTreat=="C")
+
+cph3 <- coxph(Surv(age, status==2) ~ adultTreat + sex, 
+                   data = earlyRich)
+ggforest(cph3, data = earlyRich)
+
+
+
+cph4 <- coxph(Surv(age, status==2) ~ adultTreat+larvalTreat+sex+
+                larvalTreat*adultTreat, 
+                   data = eelife)
+ggforest(cph4, data = eelife)
+
+```
+
+
 
