--- a/scripts/eeSurv_viz.Rmd
+++ b/scripts/eeSurv_viz.Rmd
@@ -22,6 +22,7 @@ library(splines) #needed by survival package
 library(tidyverse) 
 library(forcats)
 library(cowplot)
+library(Greg)
 #library(coxme)
 #library(brms)
 
@@ -163,11 +164,21 @@ ggsave(last_plot(), file = "../plots/density_male_female.pdf",
 #### Males alone
 ## b) Reaction norms
 
+
 # Male and female combined
 
 ```{r}
 # Model
 eelife <- read.csv("../processed/eeAlldat.csv")
+
+# Look at distribution of events
+eelife <- eelife %>% 
+  mutate(stats = ifelse(status == 2, 1, 0))
+
+surv <- Surv(eelife$age, eelife$stats)
+ggsurvevents(surv, normalized = TRUE, type="fraction", 
+             censored.on.top = TRUE,
+             ggtheme = theme_survminer(title = "blank"))
 
 mf <- survfit(Surv(age, status == 2) ~ adultTreat,
                    conf.type = "log", 
@@ -177,6 +188,7 @@ mf <- survfit(Surv(age, status == 2) ~ adultTreat,
                    data = eelife)
 
 summary(mf)$table[, "median"]
+
 
 mf.plot <- ggsurvplot(mf, data = eelife, 
                      conf.int = FALSE,
@@ -377,6 +389,8 @@ Early:Adult diet interaction sig, albeit skewed residuals
 Intearction of non-PH variables with age non-convergent (diet interacts heavily with age - nothing else is significant)
 Models on age-classes not significant for either diet, but a large effect of sex.
 
+Larval treatment effect depends on adult age 
+
 ```{r}
 
 # All together
@@ -441,129 +455,329 @@ cph5 <- coxph(Surv(age, status==2) ~ adultTreat + larvalTreat + sex +
               data=eelife)
 cph5
 # ‘floor’ not meaningful for factors
+
+
 ```
 
-## Sexes separately
+# Cox model with split-time variable
+
+Unsplit-time variable: Adult treatment has a large effect. Sex has a large treatment.Larval treat and sex have very non-PH
+
+Split-time variable: Adult treatment and sex have large effects. Larval treat and sex have non-PH
+
+Splitting at interval of 0.5: Both treatments have PHs, but sex is still very much confounding.
+
+```{r}
+
+eelife <- read.csv("../processed/eeAlldat.csv") %>%
+  select(-c(X,cageID,larv_adult))
+
+eelife <- eelife %<>% 
+  mutate(status = factor(status),
+        larvalTreat = factor(larvalTreat),
+        adultTreat = factor(adultTreat),
+        sex = factor(sex))
+
+
+
+# Now we can fit a regular cox regression:
+
+regular_model <- coxph(Surv(age, status == 2) ~ larvalTreat + 
+                         adultTreat + sex, data = eelife,
+                       x = TRUE, y = TRUE)
+summary(regular_model)
+cox.zph(regular_model)
+
+
+# Now, split dataset and repeat model
+
+spl_eelife <-
+  eelife %>% 
+  timeSplitter(by = 0.5,
+               event_var = "status",
+               event_start_status = 3,
+               time_var = "age")
+
+interval_model <-
+  update(regular_model, 
+         Surv(Start_time, Stop_time, status == 2) ~ .,
+         data = spl_eelife)
+
+summary(interval_model)
+
+# The difference between the models should be negligible:
+
+cbind(Regular = coef(regular_model),
+      Interval = coef(interval_model),
+      Difference = coef(regular_model) - coef(interval_model)) %>% 
+  txtRound(digits = 5) %>% 
+  knitr::kable(align = "r")
+
+
+# Now, look for time varying coefficients with survival::cox.zph() 
+
+cox.zph(regular_model) %>% 
+  extract2("table") %>% 
+  txtRound(digits = 2) %>% 
+  knitr::kable(align = "r")
+
+# larvalTreat and sex are time-variable
+
+
+# Update split-time model with interaction
+
+time_int_model <- 
+  update(interval_model,
+         .~.+larvalTreat:Start_time,
+         .~.+sex:Start_time)
+summary(time_int_model)
+
+sx <- cox.zph(time_int_model)
+sx
+
+ggcoxzph(sx)
+
+#ggforest(time_int_model, data = spl_eelife)
+
+ggforest(
+  time_int_model,
+  data = spl_eelife,
+  main = NULL,
+  cpositions = c(0.02, 0.22, 0.4),
+  fontsize = 0.7,
+  refLabel = "reference",
+  noDigits = 2
+)
+
+
+
+# Adjusted survival curve for cox model
+ggadjustedcurves(regular_model, data = eelife,
+                    variable  = eelife[, "larvalTreat"],
+                   legend.title = "Larval Treatment", )
+```
+
+
+
+## Sexes separately (to remove confounding effects of sex)
 
 PH assumption violated
 Intearction of non-PH variables with age non-convergent (adultTrt sig)
 Models on age-classes not significant for either diet
 
+
+### Females
+
+Unsplit model: Adult treat highly sig; but adult treat has non-PH
+
+Split model: At 0.5, adult treat remains highly sig; Adult treatment depends on age very significantly; All hazards are proportional!
+
+This looks like a valid solution.
+
 ```{r}
+eelife <- read.csv("../processed/eeAlldat.csv") %>%
+  select(-c(X,cageID,larv_adult))
+
 female <- subset(eelife, eelife$sex=="F")
 
-f1 <- coxph(Surv(age, status==2) ~ larvalTreat + adultTreat, 
-                   data = female)
-f1
-test.f1 <- cox.zph(f1)
-test.f1 # non-PH
+female <- female %>% 
+  mutate(status = factor(status),
+        larvalTreat = factor(larvalTreat),
+        adultTreat = factor(adultTreat),
+        sex = factor(sex))
 
 
-f2 <- coxph(Surv(age, status==2) ~ larvalTreat + adultTreat +
-              larvalTreat:adultTreat, data = female)
-f2
-test.f2 <- cox.zph(f2)
-test.f2 # non-PH
-
-hist(female$age)
-
-female$age.f <- car::recode(female$age, 
-                              "lo:19=1; 
-                              20:29=2; 
-                              30:49=3; 
-                              50:hi=4") 
-
-xtabs(~ age.f, data=female)
+# Fit a regular cox model
+regular_model <- coxph(Surv(age, status == 2) ~ larvalTreat + 
+                         adultTreat, data = female)
+summary(regular_model)
+cox.zph(regular_model)
 
 
-f3 <- coxph(Surv(age, status==2) ~ larvalTreat + adultTreat + 
-                    strata(age.f), data=female)
-f3
+# Now, split dataset and repeat model
 
-test.f3 <- cox.zph(f3)
-test.f3
-ggcoxzph(test.f3)
+spl_female <-
+  female %>% 
+  timeSplitter(by = 0.5,
+               event_var = "status",
+               event_start_status = 3,
+               time_var = "age")
+
+interval_model <-
+  update(regular_model, 
+         Surv(Start_time, Stop_time, status == 2) ~ .,
+         data = spl_female)
+
+summary(interval_model)
 
 
+# The difference between the models should be negligible:
+
+cbind(Regular = coef(regular_model),
+      Interval = coef(interval_model),
+      Difference = coef(regular_model) - coef(interval_model)) %>% 
+  txtRound(digits = 5) %>% 
+  knitr::kable(align = "r")
+
+
+# Now, look for time varying coefficients with survival::cox.zph() 
+
+cox.zph(regular_model) %>% 
+  extract2("table") %>% 
+  txtRound(digits = 2) %>% 
+  knitr::kable(align = "r")
+
+# adultTreat is time-variable
+
+
+# Update split-time model with interaction
+
+time_int_model <- 
+  update(interval_model,
+         .~.+adultTreat:Start_time)
+summary(time_int_model)
+
+sx <- cox.zph(time_int_model)
+sx
+
+ggcoxzph(sx)
+
+#ggforest(time_int_model, data = spl_eelife)
+
+FF <- ggforest(
+  time_int_model,
+  data = spl_female,
+  main = NULL,
+  cpositions = c(0.02, 0.22, 0.4),
+  fontsize = 0.7,
+  refLabel = "reference",
+  noDigits = 2
+)
+
+ggsave(FF,filename = "~/MyGithub/early_experience/Plots/Female_Greg_Forest_HR.pdf", height=3, width=6)
+
+```
+
+### Males
+
+Unsplit model: Adult DR is higly sig in males also; Both larval and adult treat are non-PH.
+
+Split model: Has larval treat sig also (P=0.0195), with PHs for both larval treat and larval treat*time; However, non-PH for adult treat.
+
+This seems a satisfactory solution since we are interested in larval diet.
+
+```{r}
+eelife <- read.csv("../processed/eeAlldat.csv") %>%
+  select(-c(X,cageID,larv_adult))
 
 male <- subset(eelife, eelife$sex=="M")
 
-m1 <- coxph(Surv(age, status==2) ~ larvalTreat + adultTreat, 
-                   data = male)
-m1
-test.m1 <- cox.zph(m1)
-test.m1 # non-PH
+male <- male %>% 
+  mutate(status = factor(status),
+        larvalTreat = factor(larvalTreat),
+        adultTreat = factor(adultTreat),
+        sex = factor(sex))
 
 
-m2 <- coxph(Surv(age, status==2) ~ larvalTreat + adultTreat +
-              larvalTreat:adultTreat, data = male)
-m2
-test.m2 <- cox.zph(m2)
-test.m2 # non-PH
-
-m2.1 <- coxph(Surv(age, status==2) ~ larvalTreat + larvalTreat:age + 
-                adultTreat + adultTreat:age + 
-                larvalTreat:adultTreat, data = male)
-# all run out of iterations (non-convergent)
-
-hist(male$age)
-
-male$age.m <- car::recode(male$age, 
-                              "lo:29=1; 
-                              30:39=2; 
-                              40:59=3;
-                              60:hi=4") 
-
-xtabs(~ age.m, data=male)
+# Fit a regular cox model
+regular_model <- coxph(Surv(age, status == 2) ~ larvalTreat + 
+                         adultTreat, data = male)
+summary(regular_model)
+cox.zph(regular_model)
 
 
-m3 <- coxph(Surv(age, status==2) ~ larvalTreat + adultTreat + 
-                    strata(age.m), data=male)
-m3
+# Now, split dataset and repeat model
 
-test.m3 <- cox.zph(m3)
-test.m3
-ggcoxzph(test.m3)
-```
+spl_male <-
+  male %>% 
+  timeSplitter(by = 0.5,
+               event_var = "status",
+               event_start_status = 3,
+               time_var = "age")
+
+interval_model <-
+  update(regular_model, 
+         Surv(Start_time, Stop_time, status == 2) ~ .,
+         data = spl_male)
+
+summary(interval_model)
+
+
+# The difference between the models should be negligible:
+
+cbind(Regular = coef(regular_model),
+      Interval = coef(interval_model),
+      Difference = coef(regular_model) - coef(interval_model)) %>% 
+  txtRound(digits = 5) %>% 
+  knitr::kable(align = "r")
+
+
+# Now, look for time varying coefficients with survival::cox.zph() 
+
+cox.zph(regular_model) %>% 
+  extract2("table") %>% 
+  txtRound(digits = 2) %>% 
+  knitr::kable(align = "r")
+
+# both variables are time-nonrandom
+
+
+# Update split-time model with interaction
+
+time_int_model <- 
+  update(interval_model,
+         .~.+larvalTreat:Start_time,
+         .~.+adultTreat:Start_time)
+summary(time_int_model)
+
+sx <- cox.zph(time_int_model)
+sx
+#adultTreat still non-PH
+
+ggcoxzph(sx)
+
+#ggforest(time_int_model, data = spl_eelife)
+
+MM <- ggforest(
+  time_int_model,
+  data = spl_male,
+  main = NULL,
+  cpositions = c(0.02, 0.22, 0.4),
+  fontsize = 0.7,
+  refLabel = "reference",
+  noDigits = 2
+)
+
+ggsave(FF,filename = "~/MyGithub/early_experience/Plots/male_Greg_Forest_HR.pdf", height=3, width=6)
+
 
 # Diagnostics
 
-```{r}
-# Influential cases
 
-cph1beta <- residuals(cph4, type="dfbeta") 
+## Influential cases
 
-par(mfrow=c(2, 2))
+# typeof residuals on Y axis: c(“martingale”, “deviance”, “score”, “schoenfeld”, “dfbeta”, “dfbetas”, “scaledsch”, “partial”).
+lin_mm <- ggcoxdiagnostics(time_int_model, type = "dfbeta",
+                 linear.predictions = FALSE, ggtheme = theme_bw())
 
-for (j in 1:3) {
-  plot(cph1beta[, j], 
-       ylab=names(coef(cph4))[j]) 
-  abline(h=0, lty=2)
-}
-
-# Non-linearity
+ggsave(lin_mm,filename = "~/MyGithub/early_experience/Plots/male_nonlinearity_test.pdf", height=5, width=9)
 
 
-# Early poor
-earlyPoor <- subset(eelife, eelife$larvalTreat=="DR")
+### Visualize deviance residuals to check for outliers
 
-cph2 <- coxph(Surv(age, status==2) ~ adultTreat + sex, 
-                   data = earlyPoor)
-ggforest(cph2, data = earlyPoor)
+dev_mm <- ggcoxdiagnostics(time_int_model, type = "deviance",
+                 linear.predictions = FALSE, ggtheme = theme_bw())
 
+dev_reg <- ggcoxdiagnostics(interval_model, type = "deviance",
+                 linear.predictions = FALSE, ggtheme = theme_bw())
 
-# Early rich
-earlyRich <- subset(eelife, eelife$larvalTreat=="C")
-
-cph3 <- coxph(Surv(age, status==2) ~ adultTreat +sex + sex*age, 
-                   data = earlyRich)
-ggforest(cph3, data = earlyRich, main=NULL)
-test.cph3 <- cox.zph(cph3)
-test.cph3
-ggcoxzph(test.cph3)
+ggsave(dev_mm,filename = "~/MyGithub/early_experience/Plots/male_deviance_test.pdf", height=5, width=9)
 
 
+## Testing non-linearity
+### i.e. checking if functional form of model is correcctly specified
 
+ggcoxfunctional(Surv(age, status==2) ~ age + log(age) + sqrt(age), data = male)
 ```
 
 
